--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,8 +22,22 @@
     <div class="bottom">
         <a href="">아이디 찾기</a>
         <a href="">비밀번호 찾기</a>
-        <a href="/account/register">회원가입 하기</a>
+        <button type="button" onclick="getRegisterForm()">회원가입</button>
     </div>
 </form>
+<div id="registerForm"></div>
 </body>
 </html>
+
+<script>
+    function getRegisterForm() {
+        const listDiv = document.getElementById('registerForm');
+        let registerFormHtml = '<form action="/login/register" method="post">';
+        registerFormHtml += '<input type="text" name="registerId" placeholder="가입할 아이디를 입력하세요.">';
+        registerFormHtml += '<input type="password" name="registerPassword" placeholder="가입할 비밀번호를 입력하세요.">';
+        registerFormHtml += '<input type="email" name="registerEmail" placeholder="가입할 이메일을 입력하세요.">';
+        registerFormHtml += '<button type="submit">가입 신청하기</button>'
+        registerFormHtml += '</form>';
+        listDiv.innerHTML = registerFormHtml;
+    }
+</script>
